# deepresearch

./: .dockerignore  .env.example  .gitignore  CHEATSHEET.md  DEPLOY.md  Dockerfile  EXPLAINER.md  HANDOFF.md  LICENSE  MANIFEST.txt  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  agents.py  api.py  config.py  llm.py  models.py  rag.py  store.py  tools.py  ui_streamlit.py  worker.py
eval/: questions.json  redteam.py  run_eval.py
samples/: demo_run.json
scripts/: setup.sh
tests/: conftest.py  test_agents.py  test_api.py  test_llm.py  test_models.py  test_rag.py  test_redteam.py
